package architectoryHW5.calculatorMVC.db.fetchData;

public interface DBInterface {
    String fetchData();
}
