package architectoryHW5.calculatorMVC.db.fetchData;

public class FetchDB implements DBInterface {
    @Override
    public String fetchData() {
        // Реализация извлечения данных из базы данных
        return null;
    }
}
