package architectoryHW5.calculatorMVC.db.saveData;

public class SaveData implements SaveDataInterface {
    @Override
    public void saveData(String data) {
        // Реализация сохранения данных в базу данных
    }
}
