package architectoryHW5.calculatorMVC.db.saveData;

public interface SaveDataInterface {
    void saveData(String data);
}
