package architectoryHW5.calculatorMVC.model.divideOperation;

public interface InterfaceDivideOperation {
    double divide();
}
