package architectoryHW5.calculatorMVC.model.multiplyOperation;

public interface InterfaceMultiplyOperation {
    double multiply();
}
