package architectoryHW5.calculatorMVC.model.substractOperation;

public interface InterfaceSubstractOperation {
    double subtract();
}
