package architectoryHW5.calculatorMVC.model.sumOperation;

public interface InterfaceSumOperation {
    double sum();
}
