package architectoryHW5.calculatorMVC.view;

public interface IView {
    /**
    * метод запускает калькулятор
     */
    void runCalculator();
}
