package architectoryHW5.calculatorMVC.view.input;

public class InputSlice implements InterfaceInput {
    /**
     * Метод считывает данные введённые пользователем
     * @return возвращает значение введённое пользователем
     */
    @Override
    public String getInput() {
        // Чтение ввода пользователя
        return null;
    }
}