package architectoryHW5.calculatorMVC.view.input;

public interface InterfaceInput {
    /**
     * Данный метод позволяем ввести данные для вычисления.
     */
    String getInput();
}
