package architectoryHW5.calculatorMVC.view.output;

public interface InterfaceOutput {
    void displayOutput(String result);
}
