package architectoryHW5.calculatorMVC.view.output;

public class OutputSlice implements InterfaceOutput {
    /**
     * Данный метод выводит на экран результат расчёта
     * @param result результат вычисления
     */
    @Override
    public void displayOutput(String result) {
        // Вывод результата на экран
    }
}